test/errors/array3.input.asm

* = $801

!let strs = [0, "b", "c"]

!byte strs
